# ContinuousIntegration

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
.github/workflows/: cmake.yml  coverage.yml
ArmstrongChecker/: CMakeLists.txt  armstrongChecker.cpp  armstrongChecker.h  armstrongCheckerTests.cc  isArmstrong .cpp  isArmstrong.cpp
PerfectSquareChecker/: CMakeLists.txt  isPerfectSquare.cpp  perfectSquareChecker.cpp  perfectSquareChecker.h  perfectSquareCheckerTests.cpp
PrimeChecker/: CMakeLists.txt  isPrime.cpp  primeChecker.cpp  primeChecker.h  primeCheckerTests.cc
